// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doAction:crud reload 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <button
            class="cxd-Button cxd-Button--primary cxd-Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新CRUD数据加载请求
            </span>
          </button>
          <div
            class="cxd-Crud is-loading"
          >
            <div
              class="cxd-Table cxd-Crud-body"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px; --Table-column-5-width: 0px; --Table-column-6-width: 0px; --Table-column-7-width: 0px; --Table-column-8-width: 0px; --Table-column-9-width: 0px; position: relative;"
            >
              <div
                class="cxd-Table-fixedTop"
              >
                <div
                  class="cxd-Table-toolbar cxd-Table-headToolbar"
                >
                  <div
                    class="cxd-Table-actions"
                  >
                    <div
                      class="cxd-ColumnToggler"
                    >
                      <button
                        class="cxd-Button cxd-Button--default cxd-Button--size-sm"
                      >
                        <icon-mock
                          classname="icon icon-columns"
                          icon="columns"
                        />
                        <span
                          class="cxd-ColumnToggler-caret"
                        >
                          <icon-mock
                            classname="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-Table-contentWrap"
              >
                <div
                  class="cxd-Table-content"
                >
                  <table
                    class="cxd-Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                      <col
                        data-index="4"
                      />
                      <col
                        data-index="5"
                      />
                      <col
                        data-index="6"
                      />
                      <col
                        data-index="7"
                      />
                      <col
                        data-index="8"
                      />
                      <col
                        data-index="9"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                ID
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                        <th
                          class=""
                          data-index="4"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Rendering engine
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="4"
                          />
                        </th>
                        <th
                          class=""
                          data-index="5"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Browser
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="5"
                          />
                        </th>
                        <th
                          class=""
                          data-index="6"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Platform(s)
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="6"
                          />
                        </th>
                        <th
                          class=""
                          data-index="7"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Engine version
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="7"
                          />
                        </th>
                        <th
                          class=""
                          data-index="8"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                CSS grade
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="8"
                          />
                        </th>
                        <th
                          class="cxd-Table-operationCell"
                          data-index="9"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                操作
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="9"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="cxd-Table-placeholder"
                      />
                    </tbody>
                  </table>
                </div>
                <div
                  class="cxd-Spinner-overlay in"
                />
                <div
                  class="cxd-Spinner cxd-Spinner--overlay in"
                  data-testid="spinner"
                >
                  <div
                    class="cxd-Spinner-icon cxd-Spinner-icon--default"
                  />
                </div>
              </div>
              <div
                class="resize-sensor"
                style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
  
                <div
                  class="resize-sensor-expand"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-shrink"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-appear"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:crud reload with data1 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <button
            class="cxd-Button cxd-Button--primary cxd-Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新CRUD数据加载请求，同时追加参数date
            </span>
          </button>
          <div
            class="cxd-Crud is-loading"
          >
            <div
              class="cxd-Table cxd-Crud-body"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px; --Table-column-5-width: 0px; --Table-column-6-width: 0px; --Table-column-7-width: 0px; --Table-column-8-width: 0px; --Table-column-9-width: 0px; position: relative;"
            >
              <div
                class="cxd-Table-fixedTop"
              >
                <div
                  class="cxd-Table-toolbar cxd-Table-headToolbar"
                >
                  <div
                    class="cxd-Table-actions"
                  >
                    <div
                      class="cxd-ColumnToggler"
                    >
                      <button
                        class="cxd-Button cxd-Button--default cxd-Button--size-sm"
                      >
                        <icon-mock
                          classname="icon icon-columns"
                          icon="columns"
                        />
                        <span
                          class="cxd-ColumnToggler-caret"
                        >
                          <icon-mock
                            classname="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-Table-contentWrap"
              >
                <div
                  class="cxd-Table-content"
                >
                  <table
                    class="cxd-Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                      <col
                        data-index="4"
                      />
                      <col
                        data-index="5"
                      />
                      <col
                        data-index="6"
                      />
                      <col
                        data-index="7"
                      />
                      <col
                        data-index="8"
                      />
                      <col
                        data-index="9"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                ID
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                        <th
                          class=""
                          data-index="4"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Rendering engine
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="4"
                          />
                        </th>
                        <th
                          class=""
                          data-index="5"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Browser
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="5"
                          />
                        </th>
                        <th
                          class=""
                          data-index="6"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Platform(s)
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="6"
                          />
                        </th>
                        <th
                          class=""
                          data-index="7"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Engine version
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="7"
                          />
                        </th>
                        <th
                          class=""
                          data-index="8"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                CSS grade
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="8"
                          />
                        </th>
                        <th
                          class="cxd-Table-operationCell"
                          data-index="9"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                操作
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="9"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="cxd-Table-placeholder"
                      />
                    </tbody>
                  </table>
                </div>
                <div
                  class="cxd-Spinner-overlay in"
                />
                <div
                  class="cxd-Spinner cxd-Spinner--overlay in"
                  data-testid="spinner"
                >
                  <div
                    class="cxd-Spinner-icon cxd-Spinner-icon--default"
                  />
                </div>
              </div>
              <div
                class="resize-sensor"
                style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
  
                <div
                  class="resize-sensor-expand"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-shrink"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-appear"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:crud reload with data2 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <button
            class="cxd-Button cxd-Button--primary cxd-Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新CRUD数据加载请求，同时追加按钮所在数据域的所有数据
            </span>
          </button>
          <div
            class="cxd-Crud is-loading"
          >
            <div
              class="cxd-Table cxd-Crud-body"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px; --Table-column-5-width: 0px; --Table-column-6-width: 0px; --Table-column-7-width: 0px; --Table-column-8-width: 0px; --Table-column-9-width: 0px; position: relative;"
            >
              <div
                class="cxd-Table-fixedTop"
              >
                <div
                  class="cxd-Table-toolbar cxd-Table-headToolbar"
                >
                  <div
                    class="cxd-Table-actions"
                  >
                    <div
                      class="cxd-ColumnToggler"
                    >
                      <button
                        class="cxd-Button cxd-Button--default cxd-Button--size-sm"
                      >
                        <icon-mock
                          classname="icon icon-columns"
                          icon="columns"
                        />
                        <span
                          class="cxd-ColumnToggler-caret"
                        >
                          <icon-mock
                            classname="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-Table-contentWrap"
              >
                <div
                  class="cxd-Table-content"
                >
                  <table
                    class="cxd-Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                      <col
                        data-index="4"
                      />
                      <col
                        data-index="5"
                      />
                      <col
                        data-index="6"
                      />
                      <col
                        data-index="7"
                      />
                      <col
                        data-index="8"
                      />
                      <col
                        data-index="9"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                ID
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                        <th
                          class=""
                          data-index="4"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Rendering engine
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="4"
                          />
                        </th>
                        <th
                          class=""
                          data-index="5"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Browser
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="5"
                          />
                        </th>
                        <th
                          class=""
                          data-index="6"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Platform(s)
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="6"
                          />
                        </th>
                        <th
                          class=""
                          data-index="7"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                Engine version
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="7"
                          />
                        </th>
                        <th
                          class=""
                          data-index="8"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                CSS grade
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="8"
                          />
                        </th>
                        <th
                          class="cxd-Table-operationCell"
                          data-index="9"
                        >
                          <div
                            class="cxd-TableCell--title"
                          >
                            <span
                              class="cxd-TplField"
                            >
                              <span>
                                操作
                              </span>
                            </span>
                          </div>
                          <div
                            class="cxd-Table-content-colDragLine"
                            data-index="9"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="cxd-Table-placeholder"
                      />
                    </tbody>
                  </table>
                </div>
                <div
                  class="cxd-Spinner-overlay in"
                />
                <div
                  class="cxd-Spinner cxd-Spinner--overlay in"
                  data-testid="spinner"
                >
                  <div
                    class="cxd-Spinner-icon cxd-Spinner-icon--default"
                  />
                </div>
              </div>
              <div
                class="resize-sensor"
                style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
  
                <div
                  class="resize-sensor-expand"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-shrink"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-appear"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
